--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,11 @@
 ---
 POSTGRES_CONFIG_TEMPLATE: postgresql.conf.j2
 POSTGRES_HBA_TEMPLATE: pg_hba.conf.j2
+
+POSTGRES_SSL_CRT: server.crt
+POSTGRES_SSL_KEY: server.key
+POSTGRES_SSL_CA: root.crt
+
 POSTGRES_PATH: "/var/lib"
 
 POSTGRES_CONFIG_HOST: "*"
