removed password from logs

--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -23,3 +23,4 @@
     - database_item.users is not mapping
     - database_item.users is iterable
     - database_item.users | length > 0
+  no_log: True
